# 3-python-package-pack-it-up

./: .gitignore  Pipfile  README.md  env.example  exampleProgram.py  pyproject.toml
.github/workflows/: build.yml
commitPackage/: __main__.py  lazyCommit.py
src/: __init__.py  lazyCommit.py
src/commitPackage/: __init__.py  __main__.py  lazyCommit.py
tests/: test_lazyCommit.py
